Fix theme button in sidebar cropped in Safari

--- a/src/components/Sidebar/style.scss
+++ b/src/components/Sidebar/style.scss
@@ -63,7 +63,7 @@
         }
 
         &__theme-button {
-            padding-top: 35px;
+            margin-top: 22px;
         }
     }
 
